--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
--r infrastructure/requirements.txt
--r runtime/requirements.txt
+aws-lambda-powertools==1.9.1
+sqlalchemy==1.3.22
+requests==2.25.1
+httpx==0.16.1
+paramiko==2.7.2
+pytz==2020.5
+datadog==0.39.0
+simple-salesforce==1.10.1
