--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -3,18 +3,14 @@
   "app_name": "chalice_demo",
   "lambda_memory_size": 1024,
   "lambda_timeout": 900,
-  "manage_iam_role": false,
-  "iam_role_arn": "arn:aws:iam::757158977961:role/local_dm-microservice",
+  "manage_iam_role": true,
   "environment_variables": {
     "POWERTOOLS_LOGGER_LOG_EVENT": "true",
     "POWERTOOLS_SERVICE_NAMESPACE": "chalice-demo",
     "POWERTOOLS_METRICS_NAMESPACE": "sandbox",
     "POWERTOOLS_SERVICE_NAME": "chalice_demo",
-    "CONFIG_SSM_PARAM_NAME": "/paypal/chalice/demo",
-    "POLLING_QUEUE_NAME": "chalice_demo_queue.fifo",
+    "ETL_BUCKET": "chalice-demo-input.fifo",
+    "POLLING_QUEUE_NAME": "chalice_demo.fifo",
     "LOG_LEVEL": "INFO"
-  },
-  "layers": [
-    "arn:aws:lambda:us-west-2:757158977961:layer:Util-Packages-37:3"
-  ]
+  }
 }
